
=======================================================
            WanT code:  Log of Changes 
=======================================================

04 May 2005      Restart is finally checked also in wannier. (AF)

02 May 2005      Fixed a long living bug in set_overlap_map; symmetrization of 
                 overlap is now numerically verified. domega.f90 routine completely
                 updated: time consume and memory usage largely reduced. (AF)

28 Apr 2005      Test8 (isolated benzene molecule) added. Summary routine updated
                 in order to manage wrong bshell choises.

27 Apr 2005      Further simplifications and code elimination in wannier.f90
                 (cfunc_exp* variables deleted). (AF)

22 Apr 2005      Overlap_extract updated with the use of blas in matrix 
                 multiplications. Overlap_update routine added (blas used). (AF)
                 Localization init added; phases routine re-introduced in the 
                 wannier localization. Restart in wannier implemented but not yet checked.

20 Apr 2005      "Habemus restartem" in disentangle (read/write) and the write procedure
                 is also implemented in wannier. Some cleaning in wannier and some
                 output format changes. Changes also in the input parameters and namelists. 
                 Tests updated. (AF)

17 Apr 2005      overlaps and projections variables (= "from_scratch" or "from_file") 
                 added to input in order to used previously saved data. Control
                 module and Input routines updated.
                 Wfc_manager module hardly changed in order to allow for this feature. 
                 (AF)

16 Apr 2005      The same speedup procedure applied to zmatrix has been used for komegai.
                 In particular we adjusted some loops and introduce the use of BLAS for
                 a matrix triple product. Interface of komegai generalized in order to