@@ -24,7 +24,7 @@
 #================================================================
 #
 
-DFT_BIN=/home/ferretti/espresso-2.1.3/bin
+DFT_BIN=/home/ferretti/espresso/bin
 TMPDIR=/home/ferretti/scratch/WanT
 
 PARA_PREFIX=
