@@ -1,0 +1,18 @@
+MAKE=make
+
+info:
+	@echo " "
+	@echo " Possible targets are: "
+	@echo "     all           perform all the calculation steps"
+	@echo "     want          perform only the WanT calculations"
+	@echo "     clean         clean up"
+	@echo " "
+
+all: 
+	./run.sh all
+
+want: 
+	./run.sh want
+
+clean:
+	./run.sh clean
