@@ -1,0 +1,9 @@
+
+==============================================================================
+TEST5 Cobalt chain (4 atoms)
+==============================================================================
+
+This test performs the calculation for the bulk conductance of a Cobalt chain
+containing 4 atoms per cell. 
+
+
