@@ -1,0 +1,14 @@
+
+&INPUT_CONDUCTOR
+   nmxa = 6
+   nmxc = 6
+   nmxb = 6
+   norb = 1
+   ne = 1000
+   nterx = 200
+   emin = -10.0
+   emax = 5.0
+   l_overlap = .FALSE.
+   bias = 0.0
+/
+
