@@ -1,0 +1,12 @@
+
+ &INPUT
+   prefix = 'cobalt_US'
+   postfix = '_WanT'
+   work_dir = './'
+   nkpts_in  = 2
+   nkpts_max = 100
+ /
+G
+0.0 0.0 0.0
+Z
+0.0 0.0 0.5
