@@ -1,0 +1,41 @@
+Infinite Cobalt Chain USPP
+4 atom/cell, Lattice Parameter = 4.0 Bohr
+   &CONTROL
+      calculation = 'scf',
+      restart_mode='from_scratch',
+      verbosity='default',
+      prefix='cobalt_US',
+      nstep=100,
+      tstress = .FALSE.,
+      tprnfor = .TRUE.,
+      pseudo_dir = './',
+   /
+   &SYSTEM
+      ibrav=8, 
+      celldm(1)=20.0, 
+      celldm(2)=1.0,
+      celldm(3)=0.8,   ! 16.0 bohr 
+      nat=4, 
+      ntyp=1,
+      ecutwfc=20.0,
+      ecutrho=300.0,
+      occupations='smearing',
+      smearing='gaussian',
+      degauss=0.01,
+   /
+   &ELECTRONS
+      electron_maxstep = 100,
+      mixing_mode = 'plain',
+      mixing_beta = 0.3,
+      conv_thr =  1.0d-8,
+   /
+ATOMIC_SPECIES
+ Co  58.9332  Co.pbe-nd-rrkjus.UPF
+ATOMIC_POSITIONS {crystal}
+Co        0.00000     0.00000    0.00000
+Co        0.00000     0.00000    0.25000
+Co        0.00000     0.00000    0.50000
+Co        0.00000     0.00000    0.75000
+K_POINTS {automatic}
+  1 1 4  0 0 1
+
