@@ -1,0 +1,47 @@
+
+&CONTROL
+   prefix = 'cobalt_US'
+   postfix = '_WanT'
+   work_dir = './'
+   verbosity = "high"
+/
+
+&SUBSPACE
+   dimwann = 24   
+/
+
+&LOCALIZATION
+   maxiter0_wan = 100
+   maxiter1_wan = 1500
+   ncg = 5    
+   nshells = 2  
+   nwhich(1) = 1  
+   nwhich(2) = 4  
+   ordering_mode = 'complete'
+/
+
+WANNIER_CENTERS {crystal}
+1gauss   0.000000    0.000000     0.000000  0  0  3  0.5
+1gauss   0.000000    0.000000     0.000000  2 -2  3  0.5
+1gauss   0.000000    0.000000     0.000000  2 -1  3  0.5
+1gauss   0.000000    0.000000     0.000000  2  0  3  0.5
+1gauss   0.000000    0.000000     0.000000  2  1  3  0.5
+1gauss   0.000000    0.000000     0.000000  2  2  3  0.5
+1gauss   0.000000    0.000000     0.250000  0  0  3  0.5
+1gauss   0.000000    0.000000     0.250000  2 -2  3  0.5
+1gauss   0.000000    0.000000     0.250000  2 -1  3  0.5
+1gauss   0.000000    0.000000     0.250000  2  0  3  0.5
+1gauss   0.000000    0.000000     0.250000  2  1  3  0.5
+1gauss   0.000000    0.000000     0.250000  2  2  3  0.5
+1gauss   0.000000    0.000000     0.500000  0  0  3  0.5
+1gauss   0.000000    0.000000     0.500000  2 -2  3  0.5
+1gauss   0.000000    0.000000     0.500000  2 -1  3  0.5
+1gauss   0.000000    0.000000     0.500000  2  0  3  0.5
+1gauss   0.000000    0.000000     0.500000  2  1  3  0.5
+1gauss   0.000000    0.000000     0.500000  2  2  3  0.5
+1gauss   0.000000    0.000000     0.750000  0  0  3  0.5
+1gauss   0.000000    0.000000     0.750000  2 -2  3  0.5
+1gauss   0.000000    0.000000     0.750000  2 -1  3  0.5
+1gauss   0.000000    0.000000     0.750000  2  0  3  0.5
+1gauss   0.000000    0.000000     0.750000  2  1  3  0.5
+1gauss   0.000000    0.000000     0.750000  2  2  3  0.5
